crates/store/re_redap_tests/src/tests/snapshots/re_redap_tests__tests__register_segment__simple_blueprint_segments_data.snap
---
source: crates/store/re_redap_tests/src/tests/register_segment.rs
expression: filtered_batch.format_snapshot(false)
---
┌──────────────────────┬───────────────────┬──────────────────┐
│ rerun_segment_id     ┆ rerun_layer_names ┆ rerun_num_chunks │
╞══════════════════════╪═══════════════════╪══════════════════╡
│ blueprint_segment_id ┆ [base]            ┆ 1                │
└──────────────────────┴───────────────────┴──────────────────┘
