crates/store/re_redap_tests/src/tests/snapshots/re_redap_tests__tests__register_segment__simple_with_multiple_timelines_manifest_schema.snap
---
source: crates/store/re_redap_tests/src/tests/register_segment.rs
expression: batch.format_schema_snapshot()
---
property:text_log:TextLog:text: List(Utf8) [
    rerun:archetype: "rerun.archetypes.TextLog"
    rerun:component: "TextLog:text"
    rerun:component_type: "rerun.components.Text"
    rerun:entity_path: "/__properties/text_log"
    rerun:kind: "data"
]
rerun_last_updated_at: non-null Timestamp(ns)
rerun_layer_name: non-null Utf8
rerun_layer_type: non-null Utf8
rerun_num_chunks: non-null UInt64
rerun_registration_status: non-null Utf8
rerun_registration_time: non-null Timestamp(ns)
rerun_schema_sha256: non-null FixedSizeBinary(32)
rerun_segment_id: non-null Utf8
rerun_size_bytes: non-null UInt64
rerun_storage_url: non-null Utf8
